--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@
 body{
     background: var(--preto);
     font-family: 'Times New Roman', Times, serif;
+    color: #FFF;
 }
 
 header .container{
@@ -22,10 +23,9 @@ header .container{
 }
 
 header .logo{
-    margin-left: 10px;
-    color: var(--vermelho);
-    font-family: 'Arial Black', Times;
-    font-size: 40px;
+    margin: 10px;
+    height: 3rem;
+    
 }
 
 header nav a{
@@ -36,4 +36,25 @@ header nav a{
 
 header nav a:hover{
     color: #FFF;
+}
+
+/*filme-principal*/
+
+.filme-principal{
+    font-size: 20px;
+    background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url(../img/the-crown.jpg);
+    height: 400px;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 90px;
+}
+
+.titulo{
+    font-size: 40px;
 }
