--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ header nav a:hover{
     color: #FFF;
 }
 
-/*filme-principal*/
+/* filme-principal */
 
 .filme-principal{
     font-size: 20px;
@@ -53,8 +53,39 @@ header nav a:hover{
 
 .filme-principal .descricao{
     margin-bottom: 90px;
+    margin-top: 10px;
 }
 
-.titulo{
+.filme-principal .titulo{
+    margin-top: 15%;
     font-size: 40px;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+}
+
+.botao{
+    background-color: rgba(0, 0, 0, .50);
+    border: none;
+    color: #FFF;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .4s ease all;
+}
+
+.botao:hover{
+    background-color: #FFF;
+    color: #333;
+}
+
+.botao i{
+    margin-right: 7px;
+}
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
 }
